backend/k8s/file-manager-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-manager
  labels:
    app: file-manager
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  clusterIP: None
  selector:
    app: file-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-manager
  labels:
    app: file-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-manager
  template:
    metadata:
      labels:
        app: file-manager
    spec:
      containers:
      - name: file-manager
        image: file-manager
