backend/k8s/user-center-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-center
  labels:
    app: user-center
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  clusterIP: None
  selector:
    app: user-center
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-center
  labels:
    app: user-center
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-center
  template:
    metadata:
      labels:
        app: user-center
    spec:
      containers:
      - name: user-center
        image: user-center
